...
    final items = [
      (
        inactiveIcon: FontAwesomeIcons.house,
        activeIcon: FontAwesomeIcons.solidHouse,
        label: 'Home',
      ),
      (inactiveIcon: FontAwesomeIcons.music, activeIcon: FontAwesomeIcons.music, label: 'Library'),
      (inactiveIcon: FontAwesomeIcons.list, activeIcon: FontAwesomeIcons.list, label: 'Playlists'),
      (inactiveIcon: FontAwesomeIcons.earthAmericas, activeIcon: FontAwesomeIcons.earthAmericas, label: 'Online'),
      (
        inactiveIcon: FontAwesomeIcons.magnifyingGlass,
        activeIcon: FontAwesomeIcons.magnifyingGlass,
        label: 'Search',
...
